# Euro-Office_desktop-apps

./: 3DPARTY.md
.docker/: desktop-apps.bake.Dockerfile  desktop-js.bake.Dockerfile
common/loginpage/locale/: ar-SA.js  be.js  bg.js  ca.js  cs.js  da.js  de.js  el.js  en-GB.js  es.js  et.js  fi.js  fr.js  ga.js  gl.js  he.js  hr.js  hu.js  hy.js  id.js  it.js  ja.js  ko.js  lo.js  lt.js  lv.js  nl.js  no.js  pl.js  pt-BR.js  pt-PT.js  ro.js  ru.js  sk.js  sl.js  sq.js  sr-Cyrl-RS.js  sr-Latn-RS.js  sv.js  tr.js  (+5 more)
common/loginpage/src/: locale.js
package/: Makefile  branding.ps1  make.ps1  make_advinst.ps1  make_inno.ps1  make_zip.ps1
package/advinst/: DesktopEditors.aip
package/aur/: PKGBUILD.m4
package/common/linux/: defines.m4  desktopeditors.sh.m4
package/deb/template/: control.m4  package.dirs.m4  package.links.m4
package/flatpak/: org.eurooffice.DesktopEditors.yml.m4
package/inno/: _code.iss  _messages.iss  common.iss  defines.iss  help.iss
package/rpm/: common.spec
win-linux/: CMakeLists.txt  resources.qrc
win-linux/res/styles/: styles.qss
win-linux/src/: cascapplicationmanagerwrapper_private.h  main.cpp  utils.cpp
win-linux/src/components/: cfiledialog.cpp  cmenu.cpp  cmessage.cpp  csvgpushbutton.cpp  ctabpanel.cpp
win-linux/src/platform_linux/: gtkfilechooser.cpp  gtkprintdialog.cpp  gtkutils.cpp  iplatformbackend.h  linux_window_utils.cpp  linux_window_utils.h  platformbackendfactory.cpp  waylandbackend.cpp  waylandbackend.h  x11backend.cpp  x11backend.h  xdgdesktopportal.cpp
win-linux/src/prop/: csplash_p.h
win-linux/src/windows/: ceditorwindow.cpp  cmainwindow.cpp  cpresenterwindow.cpp  cwindowbase.cpp
win-linux/src/windows/platform_linux/: cplatformdecoration.cpp  cplatformdecoration.h  cwindowplatform.cpp
